tests/snapshots/erroneous__erroneous@class_definition__unknown_superclass.sk.snap
---
source: tests/erroneous.rs
expression: compiler_output
input_file: tests/erroneous/class_definition/unknown_superclass.sk
---
Error: unknown type XXX in Namespace([])
   ╭─[tests/erroneous/class_definition/unknown_superclass.sk:1:11]
   │
 1 │ class A : XXX
   │           ─┬─  
   │            ╰─── unknown type
───╯

